# foundata

./: .gitignore  README.md  WEATHER.md  cmap.ipynb  ltds.ipynb  nhts.ipynb  pyproject.toml  run.ipynb  vista.ipynb  viz.ipynb
.github/workflows/: ci.yml  weekly.yml
cmap/: trip_dictionary.json  trip_dictionary.yaml
configs/cmap/: RuralSubUrban_T.csv  hh_dictionary.yaml  person_dictionary.json  person_dictionary.yaml  trip_dictionary.yaml  weather_chicago.csv
configs/cmap/old/: col_dictionary.yaml  hh_dictionary.json  veh_dictionary.json
configs/core/: template.yaml
configs/ktdb/: person_dictionary.yaml  region_centroids.csv  regions.csv  trip_dictionary.yaml  weather_regions.csv  weather_seoul.csv  zone_centroids.csv  zones.csv
configs/ltds/: hh_dictionary.yaml  person_data_dictionary.yaml  person_dictionary.yaml  stage_dictionary.yaml  trip_dictionary.yaml
configs/nhts/: hh_dictionary.yaml  person_dictionary.yaml  trip_dictionary.yaml
configs/nts/: day_dictionary.yaml  hh_dictionary.yaml  person_dictionary.yaml  stage_dictionary.yaml  trip_dictionary.yaml
configs/nts+/: hh_dictionary.yaml  person_dictionary.yaml
configs/odin/: gemeente_centroids.csv  hh_dictionary.yaml  person_dictionary.yaml  regions.csv  trip_dictionary.yaml
configs/odin/zones/: kwb_2018_84286NED.csv  kwb_2019_84583NED.csv  kwb_2020_84799NED.csv  kwb_2023_85618NED.csv  kwb_2024_85984NED.csv
configs/qhts/: hh_dictionary.yaml  person_dictionary.yaml  trip_dictionary.yaml
configs/vista/: hh_dictionary.yaml  person_dictionary.yaml  trip_dictionary.yaml
foundata/: cli.py  cmap.py  compare.py  config_validator.py  filter.py  fix.py  ktdb.py  ltds.py  nhts.py  nts.py  odin.py  post_process.py  qhts.ipynb  qhts.py  run.py  utils.py  verify.py  vista.py  viz.py
foundata/notebooks/: nhts.ipynb
ltds/: hh_dictionary.yaml  person_data_dictionary.yaml  trip_dictionary.yaml
nhts/: hh_dictionary.yaml  trips.py
scripts/: compute_region_centroids.py  create_fixtures.py  fetch_ktdb_centroids.py  fetch_odin_centroids.py  fetch_weather.py  generate_fixtures.py  precompute_zone_distances.py  run.py  scaffold_source.py
src/: ltds.ipynb  nts.ipynb
tests/: conftest.py  test_cmap.py  test_config_validator.py  test_filter.py  test_ktdb.py  test_ltds.py  test_nhts.py  test_nts.py  test_odin.py  test_post_process.py  test_qhts.py  test_utils.py  test_verify.py  test_vista.py
tests/fixtures/cmap/: household.csv  location.csv  person.csv  place.csv
tests/fixtures/ktdb/: persons.csv  trips.csv
tests/fixtures/ltds/LTDS2425/: HABORO_T.csv  Household.csv  Stage.csv  Trip.csv  person data.csv  person.csv
tests/fixtures/nhts/2022/: hhv2pub.csv  perv2pub.csv  tripv2pub.csv
tests/fixtures/nts/tab/: day_eul_2002-2023.tab  household_eul_2002-2023.tab  individual_eul_2002-2024.tab  stage_eul_2002-2023.tab  trip_eul_2002-2023.tab
tests/fixtures/post_process/: trips.csv
tests/fixtures/qhts/2017-20/: 1_QTS_HOUSEHOLDS.csv  2_QTS_PERSONS.csv  5_QTS_TRIPS.csv
tests/fixtures/vista/2012-2020/: households_vista_2012_2020_lga_v1.csv  persons_vista_2012_2020_lga_v1.csv  trips_vista_2012_2020_lga_v1.csv
vista/: hh_dictionary.yaml  person_dictionary.yaml  trip_dictionary.yaml
