[project]
name = "foundata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "cml-pam>=0.3.2",
    "fastexcel>=0.16.0",
    "ipykernel>=6.31.0",
    "ipython>=9.7.0",
    "matplotlib>=3.0",
    "numpy>=1.24",
    "pip>=25.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.3",
]

[project.scripts]
foundata = "foundata.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[dependency-groups]
scripts = ["geopandas>=0.14"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
find-links = ["https://girder.github.io/large_image_wheels"]

[tool.setuptools.packages.find]
include = ["foundata*"]

[tool.black]
line-length = 80
skip_magic_trailing_comma = true

[tool.ruff]
line-length = 80
lint.select = ["E", "F", "I", "Q"]
lint.ignore = [
    "E501", # line too long: Black will handle this.
    "D1",   # Ignore missing docstrings in public functions/modules. There are just too many of them missing...
]

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Exclude a variety of commonly ignored directories.
exclude = [".*", "__pypackages__", "build", "dist", "venv", "reports/"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

# Ignore `E402` (import violations) and `F401` (unused imports) in all `__init__.py` files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"*.ipynb" = ["E402"]

# Ignore `E402` for all notebooks
[tool.nbqa.addopts]
ruff = ["--extend-ignore=E402"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
